// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test med saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="panel oversiktspanel dittnav-lenkepanel-stor"
  >
    <div
      className="oversiktspanel__header"
    >
      <div
        className="oversiktspanel__overskrift"
      >
        <h2
          className="typo-systemtittel"
        >
          Dine siste saker
        </h2>
      </div>
    </div>
    <div
      className="oversiktspanel__liste"
    >
      <div
        className="sak-container"
      >
        <a
          className="lenke sak-lenke"
          href="http://localhost:9222/saksoversikt/tema/BAR"
          id="sak-lenke-id"
        >
          <div
            className="sak-temanavn lenke"
          >
            <h2
              className="typo-undertittel"
            >
              Barnetrygd
            </h2>
          </div>
          <div
            className="sak-status"
          >
            <p
              className="typo-undertekst"
            >
              Sist oppdatert: 
              15. aug. 2019
            </p>
          </div>
        </a>
      </div>
      <div
        className="sak-container"
      >
        <a
          className="lenke sak-lenke"
          href="http://localhost:9222/saksoversikt/tema/SYK"
          id="sak-lenke-id"
        >
          <div
            className="sak-temanavn lenke"
          >
            <h2
              className="typo-undertittel"
            >
              Sykepenger og oppfølging
            </h2>
          </div>
          <div
            className="sak-status"
          >
            <p
              className="typo-undertekst"
            >
              Sist oppdatert: 
              14. aug. 2019
            </p>
          </div>
        </a>
      </div>
    </div>
    <p
      className="typo-element oversiktspanel__header-lenke"
    >
      <a
        className="lenke"
        href="http://localhost:9222/saksoversikt"
        id="oversiktspanel__header-lenke-id"
      >
        Se alle dine saker
        <span
          className="nav-frontend-chevron chevronboks oversiktspanel__chevron chevron--hoyre"
        />
      </a>
    </p>
  </div>
  <div
    className="dittnav-lenkepanel-liten"
    id="cols-layout"
  >
    <a
      alt="Utbetalinger"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        Dine utbetalinger
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Innboks"
      className="lenkepanel dittnav-lenkepanel-liten-item last lenkepanel--border"
      href="undefined"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        Innboks
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;

exports[`Snapshot test uten saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="dittnav-lenkepanel-liten"
    id={null}
  >
    <a
      alt="Dine saker"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/saksoversikt"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        Dine saker
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Utbetalinger"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        Dine utbetalinger
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Innboks"
      className="lenkepanel dittnav-lenkepanel-liten-item last lenkepanel--border"
      href="undefined"
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        Innboks
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;
